fix: consts and dark mode

--- a/src/app/styles/primary/colors.scss
+++ b/src/app/styles/primary/colors.scss
@@ -30,9 +30,15 @@
   --medium-color: 245, 158, 11;
   --high-color: 239, 68, 68;
 
-
-  --sidebar-bg-color: #FAFAFA;
-  --sidebar-text-color: #26262A;
+  --sidebar-bg-color: #fafafa;
+  --sidebar-text-color: #26262a;
   --sidebar-section-color: #767676;
   --main-slotted: #fff;
+}
+
+html.dark {
+  --sidebar-bg-color: #1c1c1c66;
+  --sidebar-text-color: #f5f5f5;
+  --sidebar-section-color: #e5e5e5;
+  --main-slotted: #262626;
 }
